refactor: set up domain packages