@@ -5,7 +5,9 @@ import com.muscatlab.bob.repository.OrderHistoryRepository;
 import com.muscatlab.bob.service.OrderHistoryService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -16,14 +18,14 @@ public class OrderHistoryServiceImpl implements OrderHistoryService {
     private final OrderHistoryRepository repository;
 
     @Override
+    @Transactional(readOnly = true)
     public List<CustomMenuOutput> getAllByMemberId(UUID memberId) {
         List<CustomMenuOutput> menus = this.repository.findAllByMemberId(memberId).stream()
                 .map(orderHistory -> CustomMenuOutput.from(orderHistory.getCustomMenu()))
-                .collect(Collectors.toList());
+                .toList();
 
-        return menus.stream()
+        return new ArrayList<>(menus.stream()
                 .collect(Collectors.toMap(CustomMenuOutput::getName, customMenuOutput -> customMenuOutput, (customMenuOutput, customMenuOutput2) -> customMenuOutput))
-                .values().stream()
-                .collect(Collectors.toList());
+                .values());
     }
 }
